refactor: migrate to new proto packages and update mappings
- Updated imports to use new `devicecontrol.proto` and `mission.proto` packages.
- Adjusted related method mappings and tests in `LiveDataMapper`, `ConnectorMapper`, and others.
- Refactored Maven build configuration to replace deprecated Proguard setup with profile-based configuration for obfuscation and documentation.